# cpphog

./: .gitignore  CMakeLists.txt  Makefile  MakefileOld  compile_commands.json
.cache/clangd/index/: ack.pb.h.E046385E72534696.idx  main.cpp.D80A0075F4F3765F.idx
proto/: Makefile
src/: main.cpp
src/hedgehog/protocol/proto/: ack.pb.cc  ack.pb.h  emergency.pb.cc  emergency.pb.h  hedgehog.pb.cc  hedgehog.pb.h  imu.pb.cc  imu.pb.h  io.pb.cc  io.pb.h  motor.pb.cc  motor.pb.h  process.pb.cc  process.pb.h  servo.pb.cc  servo.pb.h  speaker.pb.cc  speaker.pb.h  subscription.pb.cc  subscription.pb.h  version.pb.cc  version.pb.h  vision.pb.cc  vision.pb.h
